--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="image">
-        <img src="nature 1.jpg">
+    <main class="container">
+        <div class="image">
+            <img src="nature 1.jpg">
+        </div>
+       
        
     </div>
     <div class="button">
