--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS page 2</title>
+    <title>CSS practice 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="container">
-        <div class="image">
-            <img src="nature 1.jpg">
+    <div class="image-container">
+        <div class="image-wrapper">
+            <img src="nature 1.jpg" alt="Sample Image">
+            <button class="interact-button">Click Me</button>
         </div>
-       
-       
-    </div>
-    <div class="button">
-       <button> Click Me</button>
-
     </div>
 </body>
 </html>
